syntax = "proto3";

package notifications;

import "google/protobuf/empty.proto";

service Notifications {
  rpc Notify(NotifyRequest) returns (stream NotifyResponse);
  rpc CloseNotification(CloseNotificationRequest)
      returns (google.protobuf.Empty);
}

message Action {
  string name = 1;
  string label = 2;
}

message NotifyRequest {
  string app_name = 1;
  uint32 replaces_id = 2;
  string image_path = 3;
  string summary = 4;
  string body = 5;
  repeated Action actions = 6;
  int32 expire_timeout = 7;
}

message NotificationCreated { uint32 id = 1; }

message NotificationDismissed { uint32 id = 1; }

message NotificationActionInvoked {
  uint32 id = 1;
  string action = 2;
}

message NotifyResponse {
  oneof event {
    NotificationCreated created = 1;
    NotificationDismissed dismissed = 2;
    NotificationActionInvoked action_invoked = 3;
  };
}

message CloseNotificationRequest { uint32 id = 1; }
